# hybrid-search

./: .gitignore  Cargo.toml  README.md
data/: corpus.jsonl
src/: bm25.rs  embed.rs  err.rs  fusion.rs  lib.rs  main.rs  vector.rs
tests/: hybrid.rs
